@@ -1,6 +1,6 @@
-Date: 2021-03-06
+Date: 2021-03-14
 Package: CHNOSZ
-Version: 1.4.0-18
+Version: 1.4.0-19
 Title: Thermodynamic Calculations and Diagrams for Geochemistry
 Authors@R: c(
     person("Jeffrey", "Dick", , "j3ffdick@gmail.com", role = c("aut", "cre"),
