@@ -152,7 +152,7 @@ SSI,STRAO|2,UniProt,P01006,2,36,8,12,10,6,22,4,0,4,18,6,6,16,2,8,18,16,26,2,6
 SSI,STRAO,UniProt,P01006,1,18,4,6,5,3,11,2,0,2,9,3,3,8,1,4,9,8,13,1,3
 TRPA,SALTY,UniProt,P00929,1,40,3,13,16,12,20,5,18,8,28,5,11,17,10,15,16,7,17,0,7
 UBIQ,HUMAN,UniProt,P62988,1,2,0,5,6,2,6,1,7,7,9,1,2,3,6,4,3,7,4,0,1
-CDC2,HUMAN,UniProt,NA,1,12,1,19,18,11,18,8,22,24,36,8,10,15,10,15,21,13,18,4,14
+CDK1,HUMAN,UniProt,NA,1,12,1,19,18,11,18,8,22,24,36,8,10,15,10,15,21,13,18,4,14
 CDK2,HUMAN,UniProt,NA,1,19,3,16,17,16,16,10,16,21,39,5,8,19,9,16,14,17,23,4,10
 CDK3,HUMAN,UniProt,NA,1,16,2,14,21,15,18,9,17,20,41,7,6,19,13,19,17,16,19,4,12
 CDK4,HUMAN,UniProt,NA,1,22,4,17,19,13,24,9,11,11,33,8,7,25,8,23,15,15,27,3,9
