@@ -10,7 +10,7 @@
 \newcommand{\s}{\ifelse{latex}{\eqn{_{#1}}}{\ifelse{html}{\out{<sub>#1</sub>}}{#1}}}
 \newcommand{\S}{\ifelse{latex}{\eqn{^{#1}}}{\ifelse{html}{\out{<sup>#1</sup>}}{^#1}}}
 
-\section{Changes in CHNOSZ version 1.4.0-17 (2021-03-03)}{
+\section{Changes in CHNOSZ version 1.4.0-19 (2021-03-08)}{
 
   \subsection{NEW FEATURES}{
     \itemize{
@@ -56,6 +56,10 @@
       \item Rename \samp{demo/berman.R} to \samp{potassium.R}.
 
       \item Remove unused limSolve package from Suggests in DESCRIPTION.
+
+      \item Renamed \samp{CDC2_HUMAN} to \samp{CDK1_HUMAN} (UniProt:
+      \href{https://www.uniprot.org/uniprot/P06493}{P06493}) in
+      thermo/protein.csv.
 
     }
   }
